[package]
name = "teemo_tsdb"
version = "0.1.0"
authors = ["wangyue1 <wangyue1@ly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tsz",
    "net",
]

[dependencies]
tsz = {path="tsz", version="0.1"}
net = {path="net", version="0.1"}

rocksdb = "0.13"
