[package]
name = "net"
version = "0.1.0"
authors = ["wangyue1 <wangyue1@ly.com>"]
edition = "2018"
description = "A crate for time series compression based upon Facebook's Gorilla whitepaper"
keywords = ["time", "series", "compression", "gorilla"]

[features]
nightly = []

[dependencies]
common = {path="../common", version="0.1"}
tsz = {path="../tsz", version="0.1"}

bytes = "0.5"

hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"